--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
         <title>vinny's silly website :3</title>
     </head>
+	<!-- fuck you github -->
     <body align="center">
         <div class="main-box">
             <a href="#"><img class="smooth" src="img/name.png"></a><br><br>
