--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+        <link rel="stylesheet" href="../thewebsite/style.css">
+        <link rel="icon" type="image/x-icon" href="../thewebsite/img/favicon.ico">
         <title>vinny's silly website :3</title>
     </head>
 	<!-- fuck you github -->
     <body align="center">
         <div class="main-box">
-            <a href="#"><img class="smooth" src="img/name.png"></a><br><br>
-            <img class="smooth" src="img/socials.png" alt="YouTube, Odysee, Twitch, Twitter, Mastodon, Discord, Matrix, Revolt" usemap="#image-map" border="0"><map name="image-map" border="0"><area target="" alt="YouTube" title="YouTube" href="https://youtube.com/@vinnylol" coords="-1,0,96,33" shape="rect"><area target="" alt="Odysee" title="Odysee" href="https://odysee.com/@vinnylol:e" coords="96,0,178,33" shape="rect"><area target="" alt="Twitch" title="Twitch" href="https://twitch.tv/vinny_v2" coords="252,33,178,0" shape="rect"><area target="" alt="Twitter" title="Twitter" href="https://twitter.com/d0gwifhat" coords="338,33,253,0" shape="rect"><area target="" alt="Mastodon" title="Mastodon" href="https://wetdry.world/@vinnylol" coords="445,33,339,0" shape="rect"><area target="" alt="Discord" title="Discord" href="https://discord.gg/lightshadownet" coords="528,33,446,0" shape="rect"><area target="" alt="Matrix" title="Matrix" href="https://matrix.to/#/#:" coords="528,0,603,33" shape="rect"><area target="" alt="Revolt" title="Revolt" href="https://app.revolt.chat/invite/S4sNXV7D" coords="681,33,604,0" shape="rect"></map>
+            <a href="#"><img class="smooth" src="../thewebsite/img/name.png"></a><br><br>
+            <img class="smooth" src="../thewebsite/img/socials.png" alt="YouTube, Odysee, Twitch, Twitter, Mastodon, Discord, Matrix, Revolt" usemap="#image-map" border="0"><map name="image-map" border="0"><area target="" alt="YouTube" title="YouTube" href="https://youtube.com/@vinnylol" coords="-1,0,96,33" shape="rect"><area target="" alt="Odysee" title="Odysee" href="https://odysee.com/@vinnylol:e" coords="96,0,178,33" shape="rect"><area target="" alt="Twitch" title="Twitch" href="https://twitch.tv/vinny_v2" coords="252,33,178,0" shape="rect"><area target="" alt="Twitter" title="Twitter" href="https://twitter.com/d0gwifhat" coords="338,33,253,0" shape="rect"><area target="" alt="Mastodon" title="Mastodon" href="https://wetdry.world/@vinnylol" coords="445,33,339,0" shape="rect"><area target="" alt="Discord" title="Discord" href="https://discord.gg/lightshadownet" coords="528,33,446,0" shape="rect"><area target="" alt="Matrix" title="Matrix" href="https://matrix.to/#/#:" coords="528,0,603,33" shape="rect"><area target="" alt="Revolt" title="Revolt" href="https://app.revolt.chat/invite/S4sNXV7D" coords="681,33,604,0" shape="rect"></map>
             <h3>welcome to my page :&#41;</h3>
-            <img class="smooth" src="img/neconoor.jpg" alt="vinny, infront of your noor" align="left">
+            <img class="smooth" src="../thewebsite/img/neconoor.jpg" alt="vinny, infront of your noor" align="left">
             
             <div class="info">
-                my name is vinny, im from europe! <img src="/img/europe.png"><br><br>
+                my name is vinny, im from europe! <img src="../thewebsite/img/europe.png"><br><br>
                 my hobbies are; linguistics, software engineering, electronics, video editing and sometimes gaming
             </div>
             <br><br><br>
             
             <div class="links">
-                <a href="/software/">software</a> <a href="/repo/"> - file repo </a> <a href="/videos/index.html"> - videos </a> <a href="https://paypal.me/vinyyyyyy"> - support me </a>
+                <a href="../thewebsite/software/">software</a> <a href="../thewebsite/repo/"> - file repo </a> <a href="../thewebsite/videos/index.html"> - videos </a> <a href="https://paypal.me/vinyyyyyy"> - support me </a>
             </div><hr>
 
             <a href="//7-zip.org"><img src="img/88x31/7zip.gif" border="0"></a>
